--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "express": "^4.15.4"
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.15.4",
+    "mongoose": "^4.13.0",
+    "request": "^2.83.0"
   }
 }
